@@ -13,6 +13,7 @@ git-annex (5.20150406.2) UNRELEASED; urgency=medium
   * info: Display repository mode: bare when in a bare (non-direct mode)
     repo.
   * importfeed: Fix feed download when curl is used.
+  * importfeed: Error out when passed a non-url.
 
  -- Joey Hess <id@joeyh.name>  Mon, 06 Apr 2015 20:14:20 -0400
 
